Enable dynamic JOL agent load for tests